* configure.in: Added en_CA (Canadian English) to ALL_LINGUAS 	* po/en_CA.po: Added en_CA translation. 	* po-libgimp/en_CA.po: Added en_CA translation. 	* po-plug-ins/en_CA.po: Added en_CA translation. 	* po-script-fu/en_CA.po: Added en_CA translation.
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12434 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-02-23  Adam Weinberger  <adamw@FreeBSD.org>
+
+	* configure.in: added "en_CA" (Canadian English) to ALL_LINGUAS.
+
 2004-02-23  Michael Natterer  <mitch@gimp.org>
 
 	* app/core/core-types.h: added #defines for GimpCoords' default
