--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-02-23  Adam Weinberger <adamw@FreeBSD.org>
+
+	* en_CA.po: Added "en_CA" (Canadian English) translation.
+
 2004-02-23  Marco Ciampa <ciampix@libero.it>
 
 	* it.po: Updated italian translation.
