--- a/tips/ChangeLog
+++ b/tips/ChangeLog
@@ -1,3 +1,7 @@
+2004-02-24  Sven Neumann  <sven@gimp.org>
+
+	* Makefile.am (tips_POFILES): added en_CA.po.
+
 2004-02-24  Adam Weinberger  <adamw@FreeBSD.org>
 
 	* en_CA.po: Added Canadian English translation.
