--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2004-02-25  Sven Neumann  <sven@gimp.org>
+
+	* app/tools/gimpcurvestool.[ch]
+	* app/tools/gimpimagemapoptions.[ch]
+	* app/tools/gimpimagemaptool.[ch]
+	* app/tools/gimplevelstool.[ch]: moved the settings file dialog
+	that was duplicated in the curves and levels tools to the
+	GimpImageMapTool class. Store the last used filename in the
+	GimpImageMapOptions (proper fix for bug #135059).
+
 2004-02-24  Dave Neary  <bolsh@gimp.org>
 
 	* app/tools/gimpcurvestool.c: Revert to 1.2 behaviour of hiding
