--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,11 @@
 2004-02-25  Sven Neumann  <sven@gimp.org>
 
 	* app/tools/gimpcurvestool.[ch]
+	* app/tools/gimplevelstool.h: removed obsoleted variables.
+
+2004-02-25  Sven Neumann  <sven@gimp.org>
+
+	* app/tools/gimpcurvestool.[ch]
 	* app/tools/gimpimagemapoptions.[ch]
 	* app/tools/gimpimagemaptool.[ch]
 	* app/tools/gimplevelstool.[ch]: moved the settings file dialog
