2004-02-25  Pablo G. del Campo  <pablodc@bigfoot.com>
	* es.po: Updated Spanish translation.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12445 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-02-25  Pablo G. del Campo  <pablodc@bigfoot.com>
+
+	* es.po: Updated Spanish translation.
+
 2004-02-24 Alastair McKinstry <mckinstry@debian.org>
 
 	* ga.po: Updated Irish translation.
