--- a/po-libgimp/ChangeLog
+++ b/po-libgimp/ChangeLog
@@ -1,3 +1,7 @@
+2004-02-25  Pablo Gonzalo del Campo  <pablodc@bigfoot.com>
+
+        * es.po: Updated Spanish translation.
+
 2004-02-23  Adam Weinberger  <adamw@FreeBSD.org>
 
 	* en_CA.po: Added "en_CA" (Canadian English) translation.
