Updated Catalan translation by Xavier Conde Rueda <xaviconde@eresmas.com>.
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12449 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/po-script-fu/ChangeLog
+++ b/po-script-fu/ChangeLog
@@ -1,3 +1,8 @@
+2004-02-25  Jordi Mallach  <jordi@sindominio.net>
+
+	* ca.po: Updated Catalan translation by
+	Xavier Conde Rueda <xaviconde@eresmas.com>.
+
 2004-02-24 Alastair McKinstry <mckinstry@debian.org>
 
 	* ga.po: Updated Irish translation.
