--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2004-02-25  Michael Natterer  <mitch@gimp.org>
 
+	* app/tools/gimpimagemaptool.c: cleanup.
+
+	* app/tools/gimplevelstool.c (gimp_levels_tool_dialog): added 2px
+	spacing between the pick buttons and their entries.
+
+2004-02-25  Michael Natterer  <mitch@gimp.org>
+
 	* app/tools/gimpimagemaptool.[ch]: moved "shell_desc" from
 	GimpImageMapTool to GimpImageMapToolClass and added
 	"load_dialog_title" and "save_dialog_title". Create the
