2004-02-25  Sven Neumann  <sven@gimp.org>
	* libgimpthumb/libgimpthumb-sections.txt
	* libgimpthumb/tmpl/gimpthumb-enums.sgml: updated.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12452 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/devel-docs/ChangeLog
+++ b/devel-docs/ChangeLog
@@ -1,3 +1,8 @@
+2004-02-25  Sven Neumann  <sven@gimp.org>
+
+	* libgimpthumb/libgimpthumb-sections.txt
+	* libgimpthumb/tmpl/gimpthumb-enums.sgml: updated.
+
 2004-02-24  Sven Neumann  <sven@gimp.org>
 
 	* app/app-docs.sgml
