--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2004-02-25  Sven Neumann  <sven@gimp.org>
+
+	* libgimpthumb/gimpthumbnail.c (gimp_thumbnail_load_thumb): never
+	return a failed pixbuf.
+
+	(gimp_thumbnail_save_failure) (gimp_thumbnail_save_thumb): set the
+	thumb_state when saving a thumbnail.
+
 2004-02-25  Michael Natterer  <mitch@gimp.org>
 
 	Changed libgimpthumb API in a way that will make GtkFileChooser
