2004-02-26  Sven Neumann  <sven@gimp.org>
	* libgimpthumb/gimpthumbnail.c: fixed my fixes.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12454 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-02-26  Sven Neumann  <sven@gimp.org>
+
+	* libgimpthumb/gimpthumbnail.c: fixed my fixes.
+
 2004-02-25  Sven Neumann  <sven@gimp.org>
 
 	* libgimpthumb/gimpthumbnail.c (gimp_thumbnail_load_thumb): never
