--- a/po-libgimp/ChangeLog
+++ b/po-libgimp/ChangeLog
@@ -1,3 +1,8 @@
+2004-02-26  Dmitry G. Mastrukov  <dmitry@taurussoft.org>
+
+	* ru.po: Updated Russian translation
+	from Russian team <gnome-cyr@gnome.org>.
+
 2004-02-25  Pablo Gonzalo del Campo  <pablodc@bigfoot.com>
 
         * es.po: Updated Spanish translation.
