--- a/po-libgimp/ru.po
+++ b/po-libgimp/ru.po
@@ -1,7 +1,7 @@
 # translation of gimp.LIBGIMP.po to russian
 # Copyright (C) 1999-2002, 2003 Free Software Foundation, Inc.
 # Valek Filippov <frob@df.ru>, 1999-2002.
-# Roxana Chernogolova <padavan@mail.ru>, 2003.
+# Roxana Chernogolova <padavan@mail.ru>, 2003, 2004.
 # Anatoly A. Yakushin <jaa@altlinux.ru>, 2003.
 #
 msgid ""
@@ -9,8 +9,8 @@ msgstr ""
 "Project-Id-Version: gimp.LIBGIMP\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2004-02-04 02:49+0100\n"
-"PO-Revision-Date: 2003-12-30 01:58+0300\n"
-"Last-Translator: Anatoly A. Yakushin <jaa@altlinux.ru>\n"
+"PO-Revision-Date: 2004-02-22 19:52+0300\n"
+"Last-Translator: Roxana Chernogolova <padavan@mail.ru>\n"
 "Language-Team: russian <ru@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -299,7 +299,7 @@ msgstr "Не загружен"
 #: libgimpthumb/gimpthumb-utils.c:195
 #, c-format
 msgid "Failed to create thumbnail folder '%s'."
-msgstr ""
+msgstr "Не удалось создать каталог файлов предварительного просмотра '%s'."
 
 #: libgimpwidgets/gimpcolorbutton.c:93
 msgid "/_Foreground Color"
@@ -511,7 +511,7 @@ msgstr ""
 
 #: libgimpwidgets/gimpwidgets.c:1275
 msgid "_New Seed"
-msgstr ""
+msgstr "Новое зерно"
 
 #: libgimpwidgets/gimpwidgets.c:1288
 msgid "Seed random number generator with a generated random number"
@@ -519,7 +519,6 @@ msgstr ""
 "Инициализировать генератор случайных чисел сгенерированным случайным числом"
 
 #: libgimpwidgets/gimpwidgets.c:1292
-#, fuzzy
 msgid "Randomize"
 msgstr "Перемешать"
 
@@ -574,39 +573,39 @@ msgstr "Степень контрастности:"
 
 #: modules/cdisplay_proof.c:102
 msgid "Color proof filter using ICC color profile"
-msgstr ""
+msgstr "Фильтр настройки цветопередачи, использующий ICC"
 
 #: modules/cdisplay_proof.c:166
 msgid "Color Proof"
-msgstr ""
+msgstr "Настройка цветопередачи"
 
 #: modules/cdisplay_proof.c:319
 msgid "Perceptual"
-msgstr ""
+msgstr "Перцепционый"
 
 #: modules/cdisplay_proof.c:321
 msgid "Relative Colorimetric"
-msgstr ""
+msgstr "Отн. колометрический"
 
 #: modules/cdisplay_proof.c:325
 msgid "Absolute Colorimetric"
-msgstr ""
+msgstr "Абсол. колометрический"
 
 #: modules/cdisplay_proof.c:331
 msgid "_Intent:"
-msgstr ""
+msgstr "Тип:"
 
 #: modules/cdisplay_proof.c:334
 msgid "Choose an ICC Color Profile"
-msgstr ""
+msgstr "Файл параметров ICC"
 
 #: modules/cdisplay_proof.c:337
 msgid "_Profile:"
-msgstr ""
+msgstr "Параметры:"
 
 #: modules/cdisplay_proof.c:345
 msgid "_Black Point Compensation"
-msgstr ""
+msgstr "Компенсация черных точек"
 
 #: modules/colorsel_cmyk.c:73
 msgid "CMYK color selector"
