--- a/po-plug-ins/ru.po
+++ b/po-plug-ins/ru.po
@@ -2,7 +2,7 @@
 # Copyright (C) 1999-2002, 2003, 2004 Free Software Foundation, Inc.
 # Valek Filippov <frob@df.ru>, 1999-2002.
 # Anatoly A. Yakushin <jaa@altlinux.ru>, 2003, 2004.
-# Roxana Chernogolova <padavan@mail.ru>, 2003.
+# Roxana Chernogolova <padavan@mail.ru>, 2003, 2004.
 # Grigory Bakunov <blackasp@yandex.ru>, 2003.
 #
 msgid ""
@@ -10,8 +10,8 @@ msgstr ""
 "Project-Id-Version: gimp.PLUGINS\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2004-02-04 02:49+0100\n"
-"PO-Revision-Date: 2004-02-06 00:19+0300\n"
-"Last-Translator: Anatoly A. Yakushin <jaa@altlinux.ru>\n"
+"PO-Revision-Date: 2004-02-25 14:02+0300\n"
+"Last-Translator: Roxana Chernogolova <padavan@mail.ru>\n"
 "Language-Team: russian <ru@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -27,6 +27,10 @@ msgid ""
 "(%s \"%s\")\n"
 "to your %s file."
 msgstr ""
+"В gimprc отсутствует %s:\n"
+"Добавьте запись \n"
+"(%s \"%s\")\n"
+"в файл %s."
 
 #: plug-ins/FractalExplorer/Dialogs.c:553
 #: plug-ins/FractalExplorer/Dialogs.c:1637 plug-ins/common/AlienMap.c:1149
@@ -1474,9 +1478,9 @@ msgid "Can't create a new image"
 msgstr "Невозможно создать новое изображение"
 
 #: plug-ins/common/CEL.c:438
-#, fuzzy, c-format
+#, c-format
 msgid "Unsupported bit depth (%d)!"
-msgstr "Неподдерживаемое число цветов (%d)"
+msgstr "Неподдерживаемое число цветов (%d)!"
 
 #: plug-ins/common/CML_explorer.c:133
 msgid "Keep image's values"
@@ -1893,13 +1897,13 @@ msgid "CML File Operation Warning"
 msgstr "CML внимание, файловые операции"
 
 #: plug-ins/common/CML_explorer.c:2223 plug-ins/common/channel_mixer.c:1278
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "File '%s' exists.\n"
 "Overwrite it?"
 msgstr ""
-"%s\n"
-"существует, переписать?"
+"Файл %s существует.\n"
+"Переписать?"
 
 #: plug-ins/common/CML_explorer.c:2267
 msgid "Load Parameters from"
@@ -2096,7 +2100,7 @@ msgstr "<Image>/Фильтры/Анимация/Оптимизация (для G
 
 #: plug-ins/common/animoptimize.c:214
 msgid "<Image>/Filters/Animation/_Optimize (Difference)"
-msgstr "U<Image>/Фильтры/Анимация/Оптимизация (разн.)"
+msgstr "<Image>/Фильтры/Анимация/Оптимизация (разн.)"
 
 #: plug-ins/common/animoptimize.c:231
 msgid "<Image>/Filters/Animation/_UnOptimize"
@@ -2429,12 +2433,11 @@ msgstr "Степень сжатия (приблизит.): %d к 1"
 
 #: plug-ins/common/channel_mixer.c:226
 msgid "<Image>/Filters/Colors/Channel Mi_xer.."
-msgstr "<Image>/Фильтры/Цвета/Смешать..."
+msgstr "<Image>/Фильтры/Цвета/Смешать каналы..."
 
 #: plug-ins/common/channel_mixer.c:530
-#, fuzzy
 msgid "Channel Mixer"
-msgstr "Каналы"
+msgstr "Микшер каналов"
 
 #. The preview toggle
 #: plug-ins/common/channel_mixer.c:566 plug-ins/imagemap/imap_grid.c:295
@@ -2442,9 +2445,8 @@ msgid "_Preview"
 msgstr "Просмотр"
 
 #: plug-ins/common/channel_mixer.c:591
-#, fuzzy
 msgid "O_utput Channel:"
-msgstr "Уровень на выходе:"
+msgstr "Канал вывода:"
 
 #. The monochrome toggle
 #: plug-ins/common/channel_mixer.c:660
@@ -2452,24 +2454,20 @@ msgid "_Monochrome"
 msgstr "Монохромный"
 
 #: plug-ins/common/channel_mixer.c:672
-#, fuzzy
 msgid "Preserve _Luminosity"
 msgstr "Сохранять яркость"
 
 #: plug-ins/common/channel_mixer.c:1035
-#, fuzzy
 msgid "Load Channel Mixer Settings"
-msgstr "Представление канала"
+msgstr "Загрузить установки микшера каналов"
 
 #: plug-ins/common/channel_mixer.c:1171
-#, fuzzy
 msgid "Save Channel Mixer Settings"
-msgstr "Представление канала"
+msgstr "Сохранить установки микшера каналов"
 
 #: plug-ins/common/channel_mixer.c:1264
-#, fuzzy
 msgid "Channel Mixer File Operation Warning"
-msgstr "CML внимание, файловые операции"
+msgstr "Сообщение микшера каналов"
 
 #: plug-ins/common/checkerboard.c:94
 msgid "<Image>/Filters/Render/Pattern/_Checkerboard..."
@@ -3967,7 +3965,7 @@ msgstr "Ошибка при записи в файл вывода."
 #: plug-ins/common/gif.c:2694
 #, c-format
 msgid "The default comment is limited to %d characters."
-msgstr "Комментарий по умолчанию ограничен длиною в %d символов."
+msgstr "Комментарий по умолчанию ограничен длиной в %d символов."
 
 #: plug-ins/common/gifload.c:313
 msgid "This is not a GIF file"
@@ -3975,7 +3973,7 @@ msgstr "не является файлом GIF"
 
 #: plug-ins/common/gifload.c:351
 msgid "Non-square pixels.  Image might look squashed."
-msgstr ""
+msgstr "Неквадратные пикселы. Изображение, вероятно, искажено."
 
 #: plug-ins/common/gifload.c:859
 #, c-format
@@ -3998,7 +3996,7 @@ msgstr "Кадр %d (%d%s)"
 msgid ""
 "GIF: Undocumented GIF composite type %d is not handled.  Animation might not "
 "play or re-save perfectly."
-msgstr ""
+msgstr "GIF: Недокументированный тип композиции %d. Возможно, анимация не будет работать или не сохранится корректно."
 
 #: plug-ins/common/gih.c:302
 #, c-format
@@ -5593,16 +5591,15 @@ msgstr "Сохранить комментарий"
 
 #: plug-ins/common/png.c:1653
 msgid "Save Color _Values From Transparent Pixels"
-msgstr ""
+msgstr "СОхранить значение цвета для прозрачных точек"
 
 #: plug-ins/common/png.c:1666
 msgid "Co_mpression Level:"
 msgstr "Степень сжатия:"
 
 #: plug-ins/common/png.c:1786
-#, fuzzy
 msgid "Could not load PNG defaults"
-msgstr "Документ справки не найден"
+msgstr "Невозможно загрузить параметры PNG по умолчанию"
 
 #: plug-ins/common/pnm.c:427 plug-ins/common/pnm.c:448
 #: plug-ins/common/pnm.c:455 plug-ins/common/pnm.c:464
@@ -5718,7 +5715,7 @@ msgstr "Изображение с альфа-каналами невозможн
 #: plug-ins/common/postscript.c:1470 plug-ins/common/postscript.c:1500
 #, c-format
 msgid "Error starting ghostscript (%s)"
-msgstr ""
+msgstr "Ошибка при запуске ghostscript (%s)"
 
 #: plug-ins/common/postscript.c:2297 plug-ins/common/postscript.c:2429
 #: plug-ins/common/postscript.c:2579 plug-ins/common/postscript.c:2707
@@ -6828,11 +6825,9 @@ msgid "Merge Imported Paths"
 msgstr "Обьединить импортированные контуры"
 
 #: plug-ins/common/tga.c:426
-#, fuzzy, c-format
+#, c-format
 msgid "Cannot read footer from '%s'"
-msgstr ""
-"Невозможно прочесть сноску из\n"
-"\"%s\""
+msgstr "Невозможно прочесть сноску из \"%s\""
 
 #: plug-ins/common/tga.c:442
 #, c-format
@@ -6939,7 +6934,7 @@ msgstr "JPEG"
 
 #: plug-ins/common/tiff.c:2080
 msgid "Save _color values from transparent pixels"
-msgstr ""
+msgstr "Сохранить значения цвета прозрачных точек"
 
 #: plug-ins/common/tiff.c:2095 plug-ins/common/xbm.c:1201
 msgid "Comment:"
@@ -9800,23 +9795,27 @@ msgid ""
 "\n"
 "(Added entires before error anyway)"
 msgstr ""
+"Ошибка чтения в разделе помощи:\n"
+"%s\n"
+"\n"
+"(Added entires before error anyway)"
 
 #: plug-ins/helpbrowser/domain.c:130
 #, c-format
 msgid "Help ID '%s' unknown"
-msgstr ""
+msgstr "Неизвестный ID в системе помощи - '%s'"
 
 #: plug-ins/helpbrowser/domain.c:252
 msgid "The GIMP help files are not installed."
-msgstr ""
+msgstr "Файлы помощи GIMP не установлены."
 
 #: plug-ins/helpbrowser/domain.c:254
 msgid "The requested help files are not installed."
-msgstr ""
+msgstr "Запрашиваемые файлы помощи не установлены."
 
 #: plug-ins/helpbrowser/domain.c:261
 msgid "Please check your installation."
-msgstr ""
+msgstr "Пожалуйста, проверье вашу установку."
 
 #: plug-ins/ifscompose/ifscompose.c:372
 msgid "<Image>/Filters/Render/Nature/Ifs_Compose..."
