--- a/tips/ChangeLog
+++ b/tips/ChangeLog
@@ -1,3 +1,8 @@
+2004-02-26  Dmitry G. Mastrukov  <dmitry@taurussoft.org>
+
+	* ru.po: Added Russian translation
+	from Russian team <gnome-cyr@gnome.org>.
+
 2004-02-24  Sven Neumann  <sven@gimp.org>
 
 	* Makefile.am (tips_POFILES): added en_CA.po.
