--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2004-02-26  Sven Neumann  <sven@gimp.org>
+
+	* app/display/gimpprogress.c (gimp_progress_end): check
+	display->shell before using it. It might be NULL if the function
+	is being called from gimp_exit().
+
+	* app/app_procs.c (app_exit_after_callback): added back the call
+	to exit() but only for stable releases. See my comments in the
+	code to understand the reasons.
+
 2004-02-26  Michael Natterer  <mitch@gimp.org>
 
 	* app/widgets/Makefile.am
