2004-02-26  Sven Neumann  <sven@gimp.org>
	* Makefile.am (tips_POFILES): added ru.po (Russian).


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12459 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/tips/ChangeLog
+++ b/tips/ChangeLog
@@ -1,3 +1,7 @@
+2004-02-26  Sven Neumann  <sven@gimp.org>
+
+	* Makefile.am (tips_POFILES): added ru.po (Russian).
+
 2004-02-26  Dmitry G. Mastrukov  <dmitry@taurussoft.org>
 
 	* ru.po: Added Russian translation
