2004-02-26  Michael Natterer  <mitch@gimp.org>
	* app/widgets/gimpthumbbox.[ch]: renamed some members, cleanup.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12460 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-02-26  Michael Natterer  <mitch@gimp.org>
+
+	* app/widgets/gimpthumbbox.[ch]: renamed some members, cleanup.
+
 2004-02-26  Sven Neumann  <sven@gimp.org>
 
 	* app/display/gimpprogress.c (gimp_progress_end): check
