2004-02-26  Pedro Gimeno  <pggimeno@wanadoo.es>
	* app/file/file-open.c (file_open_image): Applied a fix by
	Michael Natterer addressing a problem with the preview in the
	open images list when loading a file.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12461 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-02-26  Pedro Gimeno  <pggimeno@wanadoo.es>
+
+	* app/file/file-open.c (file_open_image): Applied a fix by
+	Michael Natterer addressing a problem with the preview in the
+	open images list when loading a file.
+
 2004-02-26  Michael Natterer  <mitch@gimp.org>
 
 	* app/widgets/gimpthumbbox.[ch]: renamed some members, cleanup.
