2004-02-26  Michael Natterer  <mitch@gimp.org>
	* app/file/file-open.c (file_open_image): added missing cast.

	* app/widgets/gimperrorconsole.[ch]
	* app/widgets/gimptexteditor.[ch]: renamed members so my file
	chooser patch becomes smaller ;)


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12462 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2004-02-26  Michael Natterer  <mitch@gimp.org>
+
+	* app/file/file-open.c (file_open_image): added missing cast.
+
+	* app/widgets/gimperrorconsole.[ch]
+	* app/widgets/gimptexteditor.[ch]: renamed members so my file
+	chooser patch becomes smaller ;)
+
 2004-02-26  Pedro Gimeno  <pggimeno@wanadoo.es>
 
 	* app/file/file-open.c (file_open_image): Applied a fix by
