2004-02-26  Sven Neumann  <sven@gimp.org>
	* INSTALL: improved help on missing libraries at run-time.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12465 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-02-26  Sven Neumann  <sven@gimp.org>
+
+	* INSTALL: improved help on missing libraries at run-time.
+
 2004-02-26  Michael Natterer  <mitch@gimp.org>
 
 	* app/gui/file-dialog-utils.[ch] (file_dialog_hide): changed
