2004-02-27  Sven Neumann  <sven@gimp.org>
	* libgimpwidgets/tmpl/gimpstock.sgml: added RTL variants of stock
	icons.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12468 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/devel-docs/ChangeLog
+++ b/devel-docs/ChangeLog
@@ -1,3 +1,8 @@
+2004-02-27  Sven Neumann  <sven@gimp.org>
+
+	* libgimpwidgets/tmpl/gimpstock.sgml: added RTL variants of stock
+	icons.
+
 2004-02-25  Sven Neumann  <sven@gimp.org>
 
 	* libgimpthumb/libgimpthumb-sections.txt
