--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-02-27  Michael Natterer  <mitch@gimp.org>
+
+	* POTFILES.in: file-dialog-utils.c -> gimpfiledialog.c
+
 2004-02-27  Francisco Javier F. Serrador  <serrador@cvs.gnome.org>
 
 	* es.po: Updated Spansih translation.
