2004-02-27  Michael Natterer  <mitch@gimp.org>
	* app/gui/file-dialog-utils.[ch]: renamed parameters and removed
	useless #includes.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12471 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-02-27  Michael Natterer  <mitch@gimp.org>
 
+	* app/gui/file-dialog-utils.[ch]: renamed parameters and removed
+	useless #includes.
+
+2004-02-27  Michael Natterer  <mitch@gimp.org>
+
 	* app/widgets/Makefile.am
 	* app/widgets/widgets-types.h
 	* app/widgets/gimpfiledialog.[ch]: new widget swallowing most
