2004-02-27  Michael Natterer  <mitch@gimp.org>
	* app/gui/file-open-dialog.c: removed the thumbnail box.

	* app/widgets/gimpfiledialog.c: and added it here.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12472 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2004-02-27  Michael Natterer  <mitch@gimp.org>
 
+	* app/gui/file-open-dialog.c: removed the thumbnail box.
+
+	* app/widgets/gimpfiledialog.c: and added it here.
+
+2004-02-27  Michael Natterer  <mitch@gimp.org>
+
 	* app/gui/file-dialog-utils.[ch]: renamed parameters and removed
 	useless #includes.
 
