2004-02-27  Michael Natterer  <mitch@gimp.org>
	* app/gui/file-dialog-utils.c
	* app/widgets/gimpfiledialog.c
	* libgimpwidgets/gimpfileentry.[ch]: some irrelevant micro changes
	to make that patch smaller.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12475 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2004-02-27  Michael Natterer  <mitch@gimp.org>
 
+	* app/gui/file-dialog-utils.c
+	* app/widgets/gimpfiledialog.c
+	* libgimpwidgets/gimpfileentry.[ch]: some irrelevant micro changes
+	to make that patch smaller.
+
+2004-02-27  Michael Natterer  <mitch@gimp.org>
+
 	* app/gui/file-open-dialog.c
 	* app/gui/file-save-dialog.c: merged some small fixes/changes
 	from my HEAD tree so the file chooser patch becomes smaller.
