2004-02-27  Michael Natterer  <mitch@gimp.org>
	* libgimpwidgets/gimpfileentry.c: removed useless #includes.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12477 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2004-02-27  Michael Natterer  <mitch@gimp.org>
 
+	* libgimpwidgets/gimpfileentry.c: removed useless #includes.
+
+2004-02-27  Michael Natterer  <mitch@gimp.org>
+
 	* app/gui/file-dialog-utils.c
 	* app/widgets/gimpfiledialog.c
 	* libgimpwidgets/gimpfileentry.[ch]: some irrelevant micro changes
