--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2004-02-28  Christophe Merlet  <redfox@redfoxcenter.org>
+
+	* fr.po: Updated French translation from
+	Raymond Ostertag <r.ostertag@caramail.com>.
+
 2004-02-27  Michael Natterer  <mitch@gimp.org>
 
 	* POTFILES.in: file-dialog-utils.c -> gimpfiledialog.c
