--- a/tips/ChangeLog
+++ b/tips/ChangeLog
@@ -1,3 +1,8 @@
+2004-02-28  Christophe Merlet  <redfox@redfoxcenter.org>
+
+	* fr.po: Updated French translation from
+	Raymond Ostertag <r.ostertag@caramail.com>.
+
 2004-02-26  Sven Neumann  <sven@gimp.org>
 
 	* Makefile.am (tips_POFILES): added ru.po (Russian).
