--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-02-28  Michael Natterer  <mitch@gimp.org>
+
+	* app/core/gimplayer.c (gimp_layer_apply_mask): when deleting the
+	mask, use "Delete Layer Mask" instead of "Apply Layer Mask" as
+	undo description.
+
 2004-02-28  Sven Neumann  <sven@gimp.org>
 
 	* libgimpwidgets/gimpdialog.c (gimp_dialog_new_valist): if the
